--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
- "theme_color": "#FFFFFF",
- "background_color": "#FFFFFF",
- "description": "Rooftop em Manaus",
  "name": "291 Rooftop",
+ "start_url": "index.htm",
+ "description": "Rooftop em Manaus",
+ "theme_color": "#FFFFFF",
  "icons": [
   {
-   "sizes": "512x512",
+   "sizes": "150x150",
    "type": "image/png",
-   "src": "misc/icon512.png"
+   "src": "misc/icon150.png"
   },
   {
-   "sizes": "192x192",
+   "sizes": "16x16",
    "type": "image/png",
-   "src": "misc/icon192.png"
+   "src": "misc/icon16.png"
   },
   {
    "sizes": "180x180",
@@ -20,14 +20,9 @@
    "src": "misc/icon180.png"
   },
   {
-   "sizes": "150x150",
+   "sizes": "192x192",
    "type": "image/png",
-   "src": "misc/icon150.png"
-  },
-  {
-   "sizes": "64x64",
-   "type": "image/png",
-   "src": "misc/icon64.png"
+   "src": "misc/icon192.png"
   },
   {
    "sizes": "32x32",
@@ -35,11 +30,16 @@
    "src": "misc/icon32.png"
   },
   {
-   "sizes": "16x16",
+   "sizes": "512x512",
    "type": "image/png",
-   "src": "misc/icon16.png"
+   "src": "misc/icon512.png"
+  },
+  {
+   "sizes": "64x64",
+   "type": "image/png",
+   "src": "misc/icon64.png"
   }
  ],
- "start_url": "index.htm",
- "display": "fullscreen"
+ "display": "fullscreen",
+ "background_color": "#FFFFFF"
 }
